<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">User Name</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button">Sign Up!</string>
    <string name="login_value">Login</string>
    <string name="signup_text">Sign Up!</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_activity_my_tabbed">MyTabbedActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
